# pawncounter

./: .gitignore  01_CacheTransitions.ipynb  02_SpectralEmbedding.ipynb  03_PawnAdvancement.ipynb  Main.ipynb  README.md  pyproject.toml
src/pawncounter/: __init__.py  core.py  util.py
