[project]
name = "pawncounter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Movpasd", email = "54367524+movpasd@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
