[project]
name = "pawncounter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Movpasd", email = "54367524+movpasd@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "altair>=6.2.2",
    "jupyterlab>=4.6.1",
    "numpy>=2.5.1",
    "polars>=1.42.1",
    "polyscope>=2.6.1",
    "pyamg>=5.3.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
